<resources>
    <string name="app_name">RealStar</string>
    <string name="show">show</string>
    <string name="dismiss">dismiss</string>
    <string name="icon">icon</string>
    <string name="icon_of_app">Icon of app</string>
    <string name="title">title</string>
    <string name="gesture">gesture</string>
    <string name="pack">package</string>
    <string name="launch">Launch</string>
    <string name="assign">Assign</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="main_act">main act</string>
    <string name="all_act">all act</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="star_attr">Star Attr</string>
    <string name="star_size_title">Star Size</string>
    <string name="star_length_title">Star Length</string>
    <string name="move_mode">Wait for move</string>
    <string name="preference_file_key">STAR</string>
    <string name="notification_hide">hide</string>
    <string name="notification_stop">stop</string>
    <string name="notification_title">Real Star Launcher</string>
    <string name="notification_info">Touch to hide</string>
    <string name="notification_app_list">App List</string>
    <string name="notification_setting">Setting</string>
    <string name="notification_exit">Exit</string>
    <string name="app_name_example" translatable="false">App name example</string>
    <string name="package_name_example" translatable="false">package name example</string>
    <string name="action_on_app" translatable="false">action on app</string>
    <string name="vibrator_during">Vibrator during</string>
</resources>
