<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/app_item_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_launcher_cube"
        android:contentDescription="@string/icon_of_app" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/app_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_name_example"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/app_item_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/package_name_example"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#555555"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/app_item_status"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/action_on_app" />

</LinearLayout>